# lerobot-episode-scorer

./: .gitignore  README.md  pyproject.toml
manifests/: pick_place_realsense_downscaled_execution_training.json
src/lerobot_episode_scorer/: __init__.py  cli.py  dataset.py  evaluate_execution_cli.py  execution.py  extract_features_cli.py  metrics.py  output.py  quality.py  train_execution_cli.py  video.py
tests/: test_cli.py  test_execution.py  test_metrics.py  test_video.py
