[project]
name = "lerobot-episode-scorer"
version = "0.2.0"
description = "Episode-level LeRobot scoring with quality metrics and local VLM-based execution scoring."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "av>=14.0.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.30.0",
    "lerobot>=0.3.0",
    "numpy>=2.1.0",
    "ollama>=0.4.0",
    "pillow>=11.0.0",
    "tqdm>=4.66.0",
]

[project.scripts]
lerobot-episode-score = "lerobot_episode_scorer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
